# snowpac

./: CMakeLists.txt  Doxyfile.in  README.md  install_nowpac.sh  license.txt
Archive/: CMakeLists.txt
Archive/cmake/: FindEIGEN.cmake  FindGTEST.cmake  FindNLOPT.cmake  buildEIGEN.cmake  buildGTEST.cmake  buildNLOPT.cmake  confCompiler.cmake
Archive/include/: BasisForMinimumFrobeniusNormModel.hpp  BasisForSurrogateModelBaseClass.hpp  BlackBoxData.hpp  GaussianProcessSupport.hpp  ImprovePoisednessBaseClass.hpp  MinimumFrobeniusNormModel.hpp  NOWPAC.hpp  NoiseDetection.hpp  SubproblemDefinitions.hpp  SubproblemOptimization.hpp  SurrogateModelBaseClass.hpp  VectorOperations.hpp
Archive/src/: BasisForMinimumFrobeniusNormModel.cpp  BlackBoxData.cpp  GaussianProcess.cpp  GaussianProcessSupport.cpp  ImprovePoisedness.cpp  MinimumFrobeniusNormModel.cpp  TriangularMatrixOperations.cpp  VectorOperations.cpp
build_old/: makefile  plot_gp.m  plot_poisedpoints1.m  plot_regsur.m  plot_surrogate.m
cmake/: FindEIGEN.cmake  FindGTEST.cmake  FindNLOPT.cmake  buildEIGEN.cmake  buildGTEST.cmake  buildNLOPT.cmake  confCompiler.cmake
doc/html/: _basis_for_minimum_frobenius_norm_model_8hpp_source.html  _black_box_base_class_8hpp_source.html  _cholesky_factorization_8hpp_source.html  _gaussian_process_8hpp_source.html  _improve_poisedness_8hpp_source.html  _improve_poisedness_base_class_8hpp_source.html  _quadratic_minimization_8hpp_source.html  _regularized_minimum_frobenius_norm_model_8hpp_source.html  _subproblem_definitions_8hpp_source.html  _surrogate_model_base_class_8hpp_source.html  _triangular_matrix_operations_8hpp_source.html  _vector_operations_8hpp_source.html  class_basis_for_surrogate_model_base_class.html  class_black_box_base_class.html  class_cholesky_factorization-members.html  class_gaussian_process.html  class_gaussian_process_base_class-members.html  class_gaussian_process_kernel_base_class-members.html  class_improve_poisedness.html  class_minimum_frobenius_norm_model.html  class_my_black_box_function.html  class_n_o_w_p_a_c-members.html  class_n_o_w_p_a_c.html  class_quadratic_minimization.html  class_quadratic_monomial-members.html  class_quadratic_monomial.html  class_regularized_minimum_frobenius_norm_model.html  class_subproblem_optimization.html  class_surrogate_model_base_class.html  class_wrapper___basis_for_minimum_frobenius_norm_model-members.html  class_wrapper___cholesky_factorization-members.html  class_wrapper___cholesky_factorization.html  class_wrapper___quadratic_minimization.html  class_wrapper___triangular_matrix_operations-members.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  struct_blackbox_data-members.html  struct_subproblem_data.html
doc/latex/: annotated.tex  class_basis_for_minimum_frobenius_norm_model.tex  class_basis_for_surrogate_model_base_class.tex  class_cholesky_factorization.tex  class_gaussian_process_kernel_base_class.tex  class_improve_poisedness.tex  class_improve_poisedness_base_class.tex  class_n_o_w_p_a_c.tex  class_quadratic_minimization.tex  class_quadratic_monomial.tex  class_subproblem_optimization.tex  class_surrogate_model_base_class.tex  class_vector_operations.tex  class_wrapper___cholesky_factorization.tex  class_wrapper___improve_poisedness.tex  class_wrapper___quadratic_minimization.tex  refman.idx  refman.ilg  struct_subproblem_data.tex
include/: #BlackBoxData.hpp#  .#BlackBoxData.hpp  .#SubproblemO  ApproxGaussianProcessAugmentedSoR.hpp  ApproxGaussianProcessSoR.hpp  ApproximatedGaussianProcess.hpp  AugmentedSubsetOfRegressors.hpp  BasisForMinimumFrobeniusNormModel.hpp  BasisForSurrogateModelBaseClass.hpp  BlackBoxBaseClass.hpp  BlackBoxData.hpp  CholeskyFactorization.hpp  DeterministicTrainingConditional.hpp  FullyIndependentTrainingConditional.hpp  GaussianProcess.hpp  GaussianProcessBaseClass.hpp  GaussianProcessKernelBaseClass.hpp  GaussianProcessSupport.hpp  ImprovePoisedness.hpp  ImprovePoisednessBaseClass.hpp  LegendreBasisForMinimumFrobeniusNormModel.hpp  MinimumFrobeniusNormModel.hpp  MonomialBasisForMinimumFrobeniusNormModel.hpp  NOWPAC.hpp  NoiseDetection.hpp  PostProcessModels.hpp  QuadraticLegendre.hpp  QuadraticMinimization.hpp  QuadraticMonomial.hpp  RegularizedMinimumFrobeniusNormModel.hpp  SubproblemDefinitions.hpp  SubproblemOptimization.hpp  SubsetOfRegressors.hpp  SurrogateModelBaseClass.hpp  TransformNode.hpp  TriangularMatrixOperations.hpp  VectorOperations.hpp
old/: MyBlackBoxFunction.cpp  RegularizedMinimumFrobeniusNormModel.cpp
snowpac/include/: BasisForSurrogateModelBaseClass.hpp  GaussianProcess.hpp  ImprovePoisednessBaseClass.hpp  NOWPAC.hpp  RegularizedMinimumFrobeniusNormModel.hpp  SubproblemDefinitions.hpp  SubproblemOptimization.hpp  VectorOperations.hpp
snowpac/src copy for gtest/: GaussianProcess.cpp  (+4 more)
src/: .#GaussianProcessSupport.cpp  ApproxGaussianProcessAugmentedSoR.cpp  ApproxGaussianProcessSoR.cpp  ApproximatedGaussianProcess.cpp  AugmentedSubsetOfRegressors.cpp  BasisForMinimumFrobeniusNormModel.cpp  BlackBoxData.cpp  CholeskyFactorization.cpp  DeterministicTrainingConditional.cpp  FullyIndependentTrainingConditional.cpp  GaussianProcess.cpp  GaussianProcessSupport.cpp  ImprovePoisedness.cpp  LegendreBasisForMinimumFrobeniusNormModel.cpp  MinimumFrobeniusNormModel.cpp  MonomialBasisForMinimumFrobeniusNormModel.cpp  QuadraticLegendre.cpp  QuadraticMinimization.cpp  QuadraticMonomial.cpp  RegularizedMinimumFrobeniusNormModel.cpp  SubsetOfRegressors.cpp  TriangularMatrixOperations.cpp  VectorOperations.cpp  gtest_basisforminimumfrobeniusnormmodel.cpp  gtest_choleskyfactorization.cpp  gtest_improvepoisedness.cpp  gtest_mfnmodel.cpp  gtest_quadraticminimization.cpp  gtest_triangularmatrixoperations.cpp  main_.cpp  main_gp.cpp  main_nowpac.cpp
src copy for gtest/: #QuadraticMinimization.cpp#  BasisForMinimumFrobeniusNormModel.cpp  MinimumFrobeniusNormModel.cpp  MyBlackBoxFunction.cpp  QuadraticMinimization.cpp  TriangularMatrixOperations.cpp  gtest_improvepoisedness.cpp  main_nowpac.cpp  main_surrogates.cpp  main_test.cpp
(+132 files in other folders)
